[package]
name = "s3-batch-put-tar"
version = "0.1.0"
authors = ["David Holroyd <dave@badgers-in-foil.co.uk>"]
edition = "2018"
license = "MIT/Apache-2.0"
description = "Gather many objects into a smaller number of s3:PutObject calls"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusoto_core = { version = "0.45", default_features = false, features = [ "rustls" ] }
rusoto_s3 = { version = "0.45", default_features = false, features = [ "rustls" ] }
tar = "0.4"
log = "0.4"
tempfile = "3.1"
tokio = { version = "0.2.5", features = [ "full" ] }
async-trait = "0.1"
serde = "1.0"
serde_derive = "1.0"
